<resources>
    <string name="app_name">UIDemo</string>
    <string name="action_settings">Settings</string>

    <string name="audio_movie">Movie</string>
    <string name="audio_music">Music</string>
    <string name="audio_gaming">Gaming</string>
    <string name="audio_vocal">"Vocal"</string>

    <string name="long_press">Try Long Press</string>

    <string name="notify_toast">Toast</string>
    <string name="notify_dialogue">Dialogue</string>
    <string name="notify_c_dialogue">Customized Dialogue</string>
    <string name="notify_snackbar">Snackbar</string>
    <string name="notify_statusbar">Statusbar Notification</string>

    <string name="notify_ok">Ok</string>
    <string name="notify_cancel">Cancel</string>
    <string name="notify_welocme">Welcome ASUS HangZhou!!</string>
</resources>
