<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.demo.ui.uidemo.NotifyFragment">

    <TextView
        android:id="@+id/tv_toast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/notify_toast"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_dlg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/notify_dialogue"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_c_dlg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:gravity="center"
        android:text="@string/notify_c_dialogue"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_snackbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/notify_snackbar"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_statusbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/notify_statusbar"
        android:textAlignment="center" />

</LinearLayout>
